package Model;

public interface Strategy {
    void execute(Cellule cellule);
}
